--- a/index.html
+++ b/index.html
@@ -100,12 +100,18 @@
             <div class="header__container">
                 <div class="header__inner">
                     <!-- Logo -->
-                    <img src="./assets/image/logo.svg" alt="" class="logo" />
+                    <a href="#!">
+                        <img
+                            src="./assets/image/logo.svg"
+                            alt=""
+                            class="logo"
+                        />
+                    </a>
                     <!-- Navbar -->
                     <nav class="navbar">
                         <ul class="navbar__list">
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link">Home</a>
+                                <a href="#!" class="navbar__link"> Home </a>
                             </li>
                             <li class="navbar__item">
                                 <a href="#!" class="navbar__link">Products</a>
@@ -125,5 +131,50 @@
                 </div>
             </div>
         </header>
+
+        <!-- Hero -->
+        <section class="hero">
+            <div class="header__container hero__container">
+                <div class="hero__inner">
+                    <!-- Decor left -->
+                    <div class="hero__decor">
+                        <div class="hero__decor-biggest"></div>
+                        <div class="hero__decor-big"></div>
+                        <div class="hero__decor-middle"></div>
+                        <div class="hero__decor-small"></div>
+                    </div>
+                    <!-- Hero content -->
+                    <section class="hero__content">
+                        <h1 class="hero__heading">
+                            Make <strong>Management</strong> Way More Easier
+                            Than Ever
+                            <span class="hero__heading-decor"></span>
+                            <span class="hero__heading-decor"></span>
+                            <span class="hero__heading-decor"></span>
+                            <span class="hero__heading-decor"></span>
+                        </h1>
+                        <p class="hero__desc">
+                            The online collaborative management platform to
+                            bring more efficiency and performace
+                        </p>
+                        <div class="hero-cta">
+                            <a href="#!" class="btn hero-cta__btn">
+                                Request Demo
+                            </a>
+                            <a href="#!" class="btn hero-cta__btn">
+                                Contact Us
+                            </a>
+                        </div>
+                    </section>
+                    <!-- Decor right -->
+                    <div class="hero__decor">
+                        <div class="hero__decor-biggest"></div>
+                        <div class="hero__decor-big"></div>
+                        <div class="hero__decor-middle"></div>
+                        <div class="hero__decor-small"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
