--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                             <span class="hero__heading-decor"></span>
                             <span class="hero__heading-decor"></span>
                             <span class="hero__heading-decor"></span>
+                            <span class="dot"></span>
                         </h1>
                         <p class="hero__desc">
                             The online collaborative management platform to
@@ -173,6 +174,249 @@
                         <div class="hero__decor-middle"></div>
                         <div class="hero__decor-small"></div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Dashbroad -->
+        <section class="dashbroad">
+            <div class="header__container dashbroad__container">
+                <div class="dashbroad__inner">
+                    <!-- Dashbroad main -->
+                    <div class="dashbroad__main">
+                        <!-- Dashbroad left -->
+                        <div class="dashbroad__main-left">
+                            <!-- Top -->
+                            <div class="dashbroad-top">
+                                <div class="dashbroad-top__menu">
+                                    <span class="dashbroad-top__bar"></span>
+                                    <span class="dashbroad-top__bar"></span>
+                                    <span class="dashbroad-top__bar"></span>
+                                </div>
+                                <img
+                                    src="./assets/icon/dashboard-icon.svg"
+                                    alt=""
+                                    class="dashbroad-top__icon"
+                                />
+                                <span class="dashbroad-top__name">
+                                    Dashboard
+                                </span>
+                            </div>
+
+                            <!-- Bottom -->
+                            <div class="dashbroad-bottom">
+                                <span class="dashbroad-bottom__name">
+                                    Collections
+                                </span>
+                                <ul class="dashbroad-bottom__list">
+                                    <li class="dashbroad-bottom__item">
+                                        School
+                                    </li>
+                                    <li class="dashbroad-bottom__item">
+                                        Personal
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Dashbroad right -->
+                        <div class="dashbroad__main-right">
+                            <!-- Top -->
+                            <div class="dashbroad-top2">
+                                <a href="#!" class="dashbroad-top2__arrow">
+                                    <svg
+                                        width="6"
+                                        height="9"
+                                        viewBox="0 0 6 9"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5 1L1 4.5L5 8"
+                                            stroke="#D1D1D3"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </a>
+                                <span class="dashbroad-top2__name">School</span>
+                                <div class="dashbroad-top2__more">
+                                    <div class="dashbroad-top2__dot"></div>
+                                    <div class="dashbroad-top2__dot"></div>
+                                    <div class="dashbroad-top2__dot"></div>
+                                </div>
+                                <div class="dashbroad-top2__user">
+                                    <img
+                                        src="./assets/icon/dashbroad-contact.svg"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+
+                            <!-- Bottom -->
+                            <div class="dashbroad-bottom2">
+                                <!-- Left -->
+                                <div class="dashbroad-bottom2__left">
+                                    <div class="dashbroad-action">
+                                        <div class="dashbroad-action__barlist">
+                                            <div
+                                                class="dashbroad-action__bar"
+                                            ></div>
+                                            <div
+                                                class="dashbroad-action__bar"
+                                            ></div>
+                                            <div
+                                                class="dashbroad-action__bar"
+                                            ></div>
+                                        </div>
+                                        <span class="dashbroad-action__sort">
+                                            Sort
+                                        </span>
+                                    </div>
+
+                                    <ul class="dashbroad-list">
+                                        <li class="dashbroad-list__item">
+                                            Finish the Easay collaboration
+                                        </li>
+                                        <li class="dashbroad-list__item">
+                                            Do the math for next monday
+                                        </li>
+                                        <li class="dashbroad-list__item">
+                                            Read the next chapter of the book
+                                        </li>
+                                        <li class="dashbroad-list__item">
+                                            Send the collabaration files to
+                                            jerusha
+                                        </li>
+                                        <li class="dashbroad-list__item">
+                                            Finish the powerpoint presentation
+                                        </li>
+                                        <li class="dashbroad-list__item">
+                                            Add task
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <!-- Right -->
+                                <div class="dashbroad-bottom2__right">
+                                    <span class="dashbroad-title">
+                                        Daily task.
+                                    </span>
+                                    <video
+                                        src="./assets/video/Moonlike Smile.mp4"
+                                        class="dashbroad-video"
+                                    >
+                                        <source
+                                            src="movie.mp4"
+                                            type="video/mp4"
+                                        />
+                                        " Your browser does not support the
+                                        video tag. "
+                                    </video>
+                                    <div class="dashbroad-play">
+                                        <svg
+                                            width="9"
+                                            height="9"
+                                            viewBox="0 0 9 9"
+                                            fill="none"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M8.42459 4.49991L0.858949 8.94269L0.794206 0.169266L8.42459 4.49991Z"
+                                                fill="#171717"
+                                            />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Dashbroad decor -->
+                    <div class="dashbroad__decor"></div>
+
+                    <!-- Dashbroad collection -->
+                    <div class="dashbroad__collection">
+                        <div class="dashbroad__collection-top">
+                            <div class="collection-top__title">Collections</div>
+                            <div class="collection-top__dots">
+                                <div class="collection-top__dot"></div>
+                                <div class="collection-top__dot"></div>
+                                <div class="collection-top__dot"></div>
+                            </div>
+                        </div>
+
+                        <div class="dashbroad__collection-list">
+                            <!-- Collection item  1 -->
+                            <div class="collection-list__item">
+                                <div class="collection-item__top">
+                                    <div class="collection-item__color"></div>
+                                    <div class="collection-item__group">
+                                        <span class="collection-item__name">
+                                            School
+                                        </span>
+                                        <p class="collection-item__desc">
+                                            4 task plus tomorrow.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="collection-item__bottom">
+                                    <div class="collection-item__bar"></div>
+                                    <span class="collection-item__number">
+                                        1/3
+                                    </span>
+                                </div>
+                            </div>
+
+                            <!-- Collection item  2 -->
+                            <div class="collection-list__item">
+                                <div class="collection-item__top">
+                                    <div class="collection-item__color"></div>
+                                    <div class="collection-item__group">
+                                        <span class="collection-item__name">
+                                            Personal
+                                        </span>
+                                        <p class="collection-item__desc">
+                                            1 task plus today.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="collection-item__bottom">
+                                    <div class="collection-item__bar"></div>
+                                    <span class="collection-item__number">
+                                        7/10
+                                    </span>
+                                </div>
+                            </div>
+
+                            <!-- Collection item  3 -->
+                            <div class="collection-list__item">
+                                <div class="collection-item__top">
+                                    <div class="collection-item__color"></div>
+                                    <div class="collection-item__group">
+                                        <span class="collection-item__name">
+                                            Design
+                                        </span>
+                                        <p class="collection-item__desc">
+                                            3 task plus rewt week.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="collection-item__bottom">
+                                    <div class="collection-item__bar"></div>
+                                    <span class="collection-item__number">
+                                        0/3
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Dashbroad decor small -->
+                    <div class="dashbroad__decor-small"></div>
                 </div>
             </div>
         </section>
