--- a/index.html
+++ b/index.html
@@ -420,5 +420,69 @@
                 </div>
             </div>
         </section>
+
+        <!-- Help -->
+        <section class="help">
+            <div class="container">
+                <div class="help__inner">
+                    <!-- Top -->
+                    <div class="help__top">
+                        <div class="help__top-icon">
+                            <img
+                                src="./assets/icon/help-report.svg"
+                                alt=""
+                                class="help-img__icon"
+                            />
+                        </div>
+                        <div class="help__top-bar"></div>
+                        <div class="help__top-icon help__top-icon-cloud">
+                            <img
+                                src="./assets/icon/help-cloud.svg"
+                                alt=""
+                                class="help-img__icon"
+                            />
+                        </div>
+                        <div class="help__top-bar"></div>
+                        <div class="help__top-icon help__top-icon-support">
+                            <img
+                                src="./assets/icon/help-support.svg"
+                                alt=""
+                                class="help-img__icon"
+                            />
+                        </div>
+                    </div>
+
+                    <!-- Bottom -->
+                    <div class="help__bottom">
+                        <!-- Item 1 -->
+                        <div class="help-item">
+                            <h3 class="help-item__label">Structured Reports</h3>
+                            <p class="help-item__desc">
+                                Sed rhoncus sit sed tellus donec lorem lectus
+                                nunc, ornare
+                            </p>
+                        </div>
+
+                        <!-- Item 2 -->
+                        <div class="help-item">
+                            <h3 class="help-item__label">Cloud System</h3>
+                            <p class="help-item__desc">
+                                Sed rhoncus sit sed tellus donec lorem lectus
+                                nunc, ornare
+                            </p>
+                        </div>
+
+                        <!-- Item 3 -->
+                        <div class="help-item">
+                            <h3 class="help-item__label">24/7 Support</h3>
+                            <p class="help-item__desc">
+                                Sed rhoncus sit sed tellus donec lorem lectus
+                                nunc, ornare
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
