--- a/index.html
+++ b/index.html
@@ -484,5 +484,156 @@
                 </div>
             </div>
         </section>
+
+        <main style="height: 10000px">
+            <!-- Task number -->
+            <section class="tasknumber">
+                <div class="container tasknumber__container">
+                    <div class="tasknumber__inner">
+                        <!-- Task content -->
+                        <div class="tasknumber__content">
+                            <h2 class="section-heading tasknumber__heading">
+                                Okay, <strong>Let’s</strong> see D’task in
+                                numbers
+                            </h2>
+                            <p class="section-desc tasknumber__desc">
+                                Powering a productive team means using a
+                                powerful tool (and plenty of snacks). From
+                                meetings and projects to events and goal
+                                setting, D'taak intuitive features give any team
+                                the ability to quickly set up and customize
+                                workflows for just about anything
+                            </p>
+
+                            <div class="tasknumber__group">
+                                <!-- Item 1 -->
+                                <div class="tasknumber-item">
+                                    <p class="tasknumber-item__data">12M</p>
+                                    <p class="tasknumber-item__name">Support</p>
+                                </div>
+
+                                <!-- Group -->
+                                <div class="tasknumber-item__group">
+                                    <div class="tasknumber-item__dots">
+                                        <div class="tasknumber-item__dot"></div>
+                                        <div
+                                            class="tasknumber-item__dot tasknumber-item__dot--active"
+                                        ></div>
+                                        <div class="tasknumber-item__dot"></div>
+                                    </div>
+                                    <!-- Item 2 -->
+                                    <div
+                                        class="tasknumber-item tasknumber-item__down"
+                                    >
+                                        <p class="tasknumber-item__data">16</p>
+                                        <p class="tasknumber-item__name">
+                                            Active User
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <!-- Item 1 -->
+                                <div class="tasknumber-item">
+                                    <p class="tasknumber-item__data">7/24</p>
+                                    <p class="tasknumber-item__name">
+                                        Languages
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Task media -->
+                        <div class="tasknumber__media">
+                            <!-- Task action 1 -->
+                            <div class="tasknumber-action">
+                                <p class="tasknumber-action__name">
+                                    Online Support
+                                </p>
+                                <a href="#!" class="tasknumber-action__icon">
+                                    <svg
+                                        width="8"
+                                        height="10"
+                                        viewBox="0 0 8 10"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M8.00048 5.00098L0.500055 9.33036L0.50091 0.670109L8.00048 5.00098Z"
+                                            fill="#F08D08"
+                                        />
+                                    </svg>
+                                </a>
+                            </div>
+
+                            <!-- Task action 2 -->
+                            <div class="tasknumber-action">
+                                <p class="tasknumber-action__name">
+                                    Exercitation
+                                </p>
+                                <a href="#!" class="tasknumber-action__icon">
+                                    <svg
+                                        width="14"
+                                        height="14"
+                                        viewBox="0 0 14 14"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M14 0L9 14L6.5 7.5L0 5L14 0Z"
+                                            fill="#FD7566"
+                                        />
+                                    </svg>
+                                </a>
+                            </div>
+
+                            <!-- Task action 3 -->
+                            <div class="tasknumber-action">
+                                <a href="#!" class="tasknumber-action__icon">
+                                    <svg
+                                        width="8"
+                                        height="10"
+                                        viewBox="0 0 8 10"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M8.00048 5.00098L0.500055 9.33036L0.50091 0.670109L8.00048 5.00098Z"
+                                            fill="#F08D08"
+                                        />
+                                    </svg>
+                                </a>
+                                <p class="tasknumber-action__name">D’ task</p>
+                            </div>
+
+                            <!-- Task action 4 -->
+                            <div class="tasknumber-action">
+                                <p class="tasknumber-action__name">Design</p>
+                                <a href="#!" class="tasknumber-action__icon">
+                                    <img
+                                        src="./assets/icon/task-icon.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </div>
+
+                            <!-- Task rectangle 1,2,3,4,5 -->
+                            <div class="tasknumber-rectangle"></div>
+                            <div class="tasknumber-rectangle"></div>
+                            <div class="tasknumber-rectangle"></div>
+                            <div class="tasknumber-rectangle"></div>
+                            <div class="tasknumber-rectangle"></div>
+
+                            <!-- Task border dash -->
+                            <div class="tasknumber-dash"></div>
+                            <div class="tasknumber-dash"></div>
+
+                            <!-- Task green circle -->
+                            <div class="tasknumber-circle__big"></div>
+                            <div class="tasknumber-circle__small"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
